# rest-apis-in-nutshell

./: db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200628_2012.py  0003_auto_20200628_2020.py
api/templates/: index.html
apis/: settings.py  urls.py
